# chat-bot

./: .gitignore  README-RM.md  README-wip.md  pyproject.toml
bot/candidate_generation/: angry_dataset_v1.json  dataset_v1.json  llama3-sentiment-control.ipynb  run_generate_response(archived).ipynb  run_generate_response_finetuning.ipynb  run_generate_response_v1.ipynb  run_generate_response_working.ipynb  test_dataset_v1.json  test_on_data.ipynb
bot/emotion_predictor/: fine_tune.py  inference.py  run_EP.ipynb
src/bot/candidate_generation/: llama3-sentiment-control.ipynb  run_generate_response_RewardModeling.ipynb  run_generate_response_finetuning.ipynb  test.py  test_dataset_v1.json  unsloth-sentiment-control.ipynb
src/bot/candidate_generation/archived/: run_generate_response_v1.ipynb
src/bot/emotion_predictor/: README-emopred.md  fine_tune.py  inference.ipynb  inference.py  run_EP copy.ipynb  run_EP.ipynb  sweep.py
src/bot/response_generator/: fine_tune_ppo.py  fine_tune_rloo.py  rloo_demo.py
src/bot/sentiment_analysis/: README.md  fine_tune.py  inference.py  push_to_hub.ipynb  run_EP.ipynb  run_SA.ipynb  sweep.py
