[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = ""
authors = [
	"hermeschen1116 <108386417+hermeschen1116@users.noreply.github.com>",
	"yangyx30678 <yangyx0000001@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
wheel = "^0.43.0"
torch = "^2.2.2"
datasets = "^2.18.0"
peft = "^0.9.0"
trl = "^0.7.11"
transformers = "4.38.2"
accelerate = "^0.28.0"
evaluate = "^0.4.1"
torcheval = "^0.0.7"
flash-attn = "^2.5.6"
openai = "^1.20.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
wandb = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
